[package]
name = "cooking-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rand = "0.8.5"
serde_json = "1.0.134"
serde = "1.0.217"
